# AttuneHelperCompanion

./: .gitignore  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  android-verify.bat  build-app.bat  build-test.bat  verify-incremental.bat
.cursor/: hooks.json
.cursor/hooks/: after-c-edit-test.ps1
.cursor/rules/: commit-and-push-default.mdc  verify-build-and-test.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
android/: CMakeLists.txt  build.gradle  build.gradle.kts  local.properties.example  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: credentials_jni.c
android/app/src/main/java/com/attunehelper/companion/: CredentialsStore.java  MainActivity.kt
android/app/src/main/java/com/attunehelper/companion/addon/: AddonInstall.kt  AddonProfileCodec.kt  WowDefaultAddons.kt
android/app/src/main/java/com/attunehelper/companion/attune/: AttuneHelperLuaParser.kt  AttuneSnapshot.kt
android/app/src/main/java/com/attunehelper/companion/attune/graph/: AttuneDisplayMath.kt  AttuneGraphView.kt
android/app/src/main/java/com/attunehelper/companion/data/: AttuneHistoryStore.kt
android/app/src/main/java/com/attunehelper/companion/nfc/: AhcNfcHelper.kt  NfcNdefPushCompat.kt
android/app/src/main/java/com/attunehelper/companion/saf/: SynastriaFolder.kt
android/app/src/main/java/com/attunehelper/companion/sync/: AttuneSyncCodec.kt
android/app/src/main/java/com/attunehelper/companion/util/: WinlatorIntents.kt
android/app/src/main/res/color/: ahc_button_tonal_bg.xml  ahc_chip_bg.xml  ahc_chip_stroke.xml  ahc_chip_text.xml  ahc_textinput_stroke.xml  bottom_nav_item_tint.xml
android/app/src/main/res/drawable/: ahc_mobile_bg.xml  ahc_rail_bg.xml  ic_addon_plugin.xml  ic_launcher_monochrome.xml  ic_nav_attunes.xml  ic_nav_catalog.xml  ic_nav_sync.xml  ic_nav_transfer.xml  ic_search_24.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: bottom_nav_menu.xml
android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: backup_rules.xml
android/app/src/test/java/com/attunehelper/companion/attune/graph/: AttuneDisplayMathTest.kt
apps/: parse_bench.c
apps/companion/: ahc_credentials.c  ahc_credentials.h  ahc_process.c  ahc_process.h  ahc_subprocess.c  ahc_tray.c  ahc_tray.h  main.c
build-tests/: .ninja_deps  .ninja_log  DartConfiguration.tcl  build.ninja
curated-wotlk-addons/: ADDONS.md  README.md
curated-wotlk-addons/addons/: README
docs/: MANUAL_TEST_CATALOG.md  android-build.md  android-signing.md  android-winlator.md  curated-monorepo.md  scope.md  synastria-monorepo-addons.md  threat-model.md  user-testing.md
manifest/: addons.json  presets.json
packaging/appimage/: attune-helper-companion.desktop  build-appimage.sh
packaging/windows/: attune_helper_companion.rc
scripts/: ahc_hub_manifest.py  android-verify.sh  audit_tbc_zip_urls.py  ci-build.sh  emit_curated_addon_manifest.py  ensure-synastria-hub.bat  felbite_rescrape_hint.bat  felbite_rescrape_hint.sh  generate-android-keystore.ps1  generate_addon_catalog.py  import_web_catalogs.py  list_synastoots_repos.py  refresh_addon_manifest.py  refresh_felbite_categories.py  verify-synastria-hub-freshness.bat
src/addons/: addon_catalog.c  addon_catalog.h  addon_links.c  addon_links.h  addon_manifest.c  addon_manifest.h  addon_profile_codec.c  addon_profile_codec.h  wow_default_addons.c  wow_default_addons.h
src/ahc/: ahc_arena.c  ahc_arena.h  ahc_find_literal.c  ahc_find_literal.h  ahc_mem_telemetry.c  ahc_mem_telemetry.h  ahc_memchr_dispatch.c  ahc_memchr_masm.h  ahc_memchr_masm64.asm  ahc_posix_argline.c  ahc_posix_argline.h  ahc_safe_url.c  ahc_safe_url.h  ahc_wow_autologin.c  ahc_wow_autologin.h  ahc_wow_autologin_win.c
src/attune/: attune_snapshot.c  attune_snapshot.h  attune_sync_codec.c  attune_sync_codec.h
tests/: addon_links_test.c  addon_manifest_test.c  addon_profile_codec_test.c  ahc_arena_test.c  ahc_find_literal_test.c  ahc_posix_argline_test.c  ahc_safe_url_test.c  ahc_subprocess_zip_test.c  ahc_wow_autologin_test.c  attune_snapshot_test.c  attune_sync_codec_test.c  wow_default_addons_test.c
tests/fixtures/: AttuneHelper.lua
